[gd_scene load_steps=14 format=3 uid="uid://dbl7xs3egveio"]

[ext_resource type="Script" uid="uid://br5g4k7841fbo" path="res://data/main/levels/endless_level_1.gd" id="1_8yaop"]
[ext_resource type="Texture2D" uid="uid://duggyxd7gp0ip" path="res://assets/textures/c631784ae869727184e08be301967a86.jpg" id="2_m7hs6"]
[ext_resource type="PackedScene" uid="uid://kavnvk1dga4n" path="res://data/player/player.tscn" id="3_2jrm7"]
[ext_resource type="Shader" uid="uid://6drfi0pwpimp" path="res://data/main/levels/endless_level_1.tres" id="3_m7hs6"]
[ext_resource type="PackedScene" uid="uid://bp8nk5o4025ox" path="res://data/ui/ability_menu.tscn" id="4_m7hs6"]

[sub_resource type="Environment" id="Environment_m7hs6"]
background_mode = 3
tonemap_mode = 3
adjustment_enabled = true
adjustment_brightness = 0.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m7hs6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hgaei"]
texture = ExtResource("2_m7hs6")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0

[sub_resource type="TileSet" id="TileSet_m7hs6"]
tile_size = Vector2i(64, 64)
sources/4 = SubResource("TileSetAtlasSource_hgaei")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dujkc"]
shader = ExtResource("3_m7hs6")

[sub_resource type="Shader" id="Shader_3xwkk"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hgaei"]
shader = SubResource("Shader_3xwkk")

[sub_resource type="Curve2D" id="Curve2D_7jj1j"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -128.657, 1191.11, 0, 0, 0, 0, -124.222, -112.362, 0, 0, 0, 0, 1887.1, -107.084, 0, 0, 0, 0, 1887.1, 1191.28, 0, 0, 0, 0, 1891.72, -110.649, 0, 0, 0, 0, -128.267, -112.139, 0, 0, 0, 0, -124.221, 1188.37, 0, 0, 0, 0, -126.439, 1191.11, 0, 0, 0, 0, 1887.28, 1188.37)
}
point_count = 9

[node name="Game" type="Node2D" node_paths=PackedStringArray("timer_label")]
y_sort_enabled = true
script = ExtResource("1_8yaop")
timer_label = NodePath("Player/Camera2D/Level_timer")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_m7hs6")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 1088)

[node name="TileMap" type="TileMap" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_m7hs6")
tile_set = SubResource("TileSet_m7hs6")
format = 2
layer_0/tile_data = PackedInt32Array(0, 4, 0, 65536, 4, 1, 131072, 4, 2, 196608, 4, 3, 262144, 4, 4, 327680, 4, 5, 393216, 4, 6, 458752, 4, 7, 524288, 4, 8, 589824, 4, 9, 655360, 4, 10, 720896, 4, 11, 786432, 4, 12, 851968, 4, 13, 917504, 4, 14, 983040, 4, 15, 1, 65540, 0, 65537, 65540, 1, 131073, 65540, 2, 196609, 65540, 3, 262145, 65540, 4, 327681, 65540, 5, 393217, 65540, 6, 458753, 65540, 7, 524289, 65540, 8, 589825, 65540, 9, 655361, 65540, 10, 720897, 65540, 11, 786433, 65540, 12, 851969, 65540, 13, 917505, 65540, 14, 983041, 65540, 15, 2, 131076, 0, 65538, 131076, 1, 131074, 131076, 2, 196610, 131076, 3, 262146, 131076, 4, 327682, 131076, 5, 393218, 131076, 6, 458754, 131076, 7, 524290, 131076, 8, 589826, 131076, 9, 655362, 131076, 10, 720898, 131076, 11, 786434, 131076, 12, 851970, 131076, 13, 917506, 131076, 14, 983042, 131076, 15, 3, 196612, 0, 65539, 196612, 1, 131075, 196612, 2, 196611, 196612, 3, 262147, 196612, 4, 327683, 196612, 5, 393219, 196612, 6, 458755, 196612, 7, 524291, 196612, 8, 589827, 196612, 9, 655363, 196612, 10, 720899, 196612, 11, 786435, 196612, 12, 851971, 196612, 13, 917507, 196612, 14, 983043, 196612, 15, 4, 262148, 0, 65540, 262148, 1, 131076, 262148, 2, 196612, 262148, 3, 262148, 262148, 4, 327684, 262148, 5, 393220, 262148, 6, 458756, 262148, 7, 524292, 262148, 8, 589828, 262148, 9, 655364, 262148, 10, 720900, 262148, 11, 786436, 262148, 12, 851972, 262148, 13, 917508, 262148, 14, 983044, 262148, 15, 5, 327684, 0, 65541, 327684, 1, 131077, 327684, 2, 196613, 327684, 3, 262149, 327684, 4, 327685, 327684, 5, 393221, 327684, 6, 458757, 327684, 7, 524293, 327684, 8, 589829, 327684, 9, 655365, 327684, 10, 720901, 327684, 11, 786437, 327684, 12, 851973, 327684, 13, 917509, 327684, 14, 983045, 327684, 15, 6, 393220, 0, 65542, 393220, 1, 131078, 393220, 2, 196614, 393220, 3, 262150, 393220, 4, 327686, 393220, 5, 393222, 393220, 6, 458758, 393220, 7, 524294, 393220, 8, 589830, 393220, 9, 655366, 393220, 10, 720902, 393220, 11, 786438, 393220, 12, 851974, 393220, 13, 917510, 393220, 14, 983046, 393220, 15, 7, 458756, 0, 65543, 458756, 1, 131079, 458756, 2, 196615, 458756, 3, 262151, 458756, 4, 327687, 458756, 5, 393223, 458756, 6, 458759, 458756, 7, 524295, 458756, 8, 589831, 458756, 9, 655367, 458756, 10, 720903, 458756, 11, 786439, 458756, 12, 851975, 458756, 13, 917511, 458756, 14, 983047, 458756, 15, 8, 524292, 0, 65544, 524292, 1, 131080, 524292, 2, 196616, 524292, 3, 262152, 524292, 4, 327688, 524292, 5, 393224, 524292, 6, 458760, 524292, 7, 524296, 524292, 8, 589832, 524292, 9, 655368, 524292, 10, 720904, 524292, 11, 786440, 524292, 12, 851976, 524292, 13, 917512, 524292, 14, 983048, 524292, 15, 9, 589828, 0, 65545, 589828, 1, 131081, 589828, 2, 196617, 589828, 3, 262153, 589828, 4, 327689, 589828, 5, 393225, 589828, 6, 458761, 589828, 7, 524297, 589828, 8, 589833, 589828, 9, 655369, 589828, 10, 720905, 589828, 11, 786441, 589828, 12, 851977, 589828, 13, 917513, 589828, 14, 983049, 589828, 15, 10, 655364, 0, 65546, 655364, 1, 131082, 655364, 2, 196618, 655364, 3, 262154, 655364, 4, 327690, 655364, 5, 393226, 655364, 6, 458762, 655364, 7, 524298, 655364, 8, 589834, 655364, 9, 655370, 655364, 10, 720906, 655364, 11, 786442, 655364, 12, 851978, 655364, 13, 917514, 655364, 14, 983050, 655364, 15, 11, 720900, 0, 65547, 720900, 1, 131083, 720900, 2, 196619, 720900, 3, 262155, 720900, 4, 327691, 720900, 5, 393227, 720900, 6, 458763, 720900, 7, 524299, 720900, 8, 589835, 720900, 9, 655371, 720900, 10, 720907, 720900, 11, 786443, 720900, 12, 851979, 720900, 13, 917515, 720900, 14, 983051, 720900, 15, 12, 786436, 0, 65548, 786436, 1, 131084, 786436, 2, 196620, 786436, 3, 262156, 786436, 4, 327692, 786436, 5, 393228, 786436, 6, 458764, 786436, 7, 524300, 786436, 8, 589836, 786436, 9, 655372, 786436, 10, 720908, 786436, 11, 786444, 786436, 12, 851980, 786436, 13, 917516, 786436, 14, 983052, 786436, 15, 13, 851972, 0, 65549, 851972, 1, 131085, 851972, 2, 196621, 851972, 3, 262157, 851972, 4, 327693, 851972, 5, 393229, 851972, 6, 458765, 851972, 7, 524301, 851972, 8, 589837, 851972, 9, 655373, 851972, 10, 720909, 851972, 11, 786445, 851972, 12, 851981, 851972, 13, 917517, 851972, 14, 983053, 851972, 15, 14, 4, 0, 65550, 4, 1, 131086, 4, 2, 196622, 4, 3, 262158, 4, 4, 327694, 4, 5, 393230, 4, 6, 458766, 4, 7, 524302, 4, 8, 589838, 4, 9, 655374, 4, 10, 720910, 4, 11, 786446, 4, 12, 851982, 4, 13, 917518, 4, 14, 15, 65540, 0, 65551, 65540, 1, 131087, 65540, 2, 196623, 65540, 3, 262159, 65540, 4, 327695, 65540, 5, 393231, 65540, 6, 458767, 65540, 7, 524303, 65540, 8, 589839, 65540, 9, 655375, 65540, 10, 720911, 65540, 11, 786447, 65540, 12, 851983, 65540, 13, 917519, 65540, 14, 16, 131076, 0, 65552, 131076, 1, 131088, 131076, 2, 196624, 131076, 3, 262160, 131076, 4, 327696, 131076, 5, 393232, 131076, 6, 458768, 131076, 7, 524304, 131076, 8, 589840, 131076, 9, 655376, 131076, 10, 720912, 131076, 11, 786448, 131076, 12, 851984, 131076, 13, 917520, 131076, 14, 17, 196612, 0, 65553, 196612, 1, 131089, 196612, 2, 196625, 196612, 3, 262161, 196612, 4, 327697, 196612, 5, 393233, 196612, 6, 458769, 196612, 7, 524305, 196612, 8, 589841, 196612, 9, 655377, 196612, 10, 720913, 196612, 11, 786449, 196612, 12, 851985, 196612, 13, 917521, 196612, 14, 18, 262148, 0, 65554, 262148, 1, 131090, 262148, 2, 196626, 262148, 3, 262162, 262148, 4, 327698, 262148, 5, 393234, 262148, 6, 458770, 262148, 7, 524306, 262148, 8, 589842, 262148, 9, 655378, 262148, 10, 720914, 262148, 11, 786450, 262148, 12, 851986, 262148, 13, 917522, 262148, 14, 19, 327684, 0, 65555, 327684, 1, 131091, 327684, 2, 196627, 327684, 3, 262163, 327684, 4, 327699, 327684, 5, 393235, 327684, 6, 458771, 327684, 7, 524307, 327684, 8, 589843, 327684, 9, 655379, 327684, 10, 720915, 327684, 11, 786451, 327684, 12, 851987, 327684, 13, 917523, 327684, 14, 20, 393220, 0, 65556, 393220, 1, 131092, 393220, 2, 196628, 393220, 3, 262164, 393220, 4, 327700, 393220, 5, 393236, 393220, 6, 458772, 393220, 7, 524308, 393220, 8, 589844, 393220, 9, 655380, 393220, 10, 720916, 393220, 11, 786452, 393220, 12, 851988, 393220, 13, 917524, 393220, 14, 21, 458756, 0, 65557, 458756, 1, 131093, 458756, 2, 196629, 458756, 3, 262165, 458756, 4, 327701, 458756, 5, 393237, 458756, 6, 458773, 458756, 7, 524309, 458756, 8, 589845, 458756, 9, 655381, 458756, 10, 720917, 458756, 11, 786453, 458756, 12, 851989, 458756, 13, 917525, 458756, 14, 22, 524292, 0, 65558, 524292, 1, 131094, 524292, 2, 196630, 524292, 3, 262166, 524292, 4, 327702, 524292, 5, 393238, 524292, 6, 458774, 524292, 7, 524310, 524292, 8, 589846, 524292, 9, 655382, 524292, 10, 720918, 524292, 11, 786454, 524292, 12, 851990, 524292, 13, 917526, 524292, 14, 23, 589828, 0, 65559, 589828, 1, 131095, 589828, 2, 196631, 589828, 3, 262167, 589828, 4, 327703, 589828, 5, 393239, 589828, 6, 458775, 589828, 7, 524311, 589828, 8, 589847, 589828, 9, 655383, 589828, 10, 720919, 589828, 11, 786455, 589828, 12, 851991, 589828, 13, 917527, 589828, 14, 24, 655364, 0, 65560, 655364, 1, 131096, 655364, 2, 196632, 655364, 3, 262168, 655364, 4, 327704, 655364, 5, 393240, 655364, 6, 458776, 655364, 7, 524312, 655364, 8, 589848, 655364, 9, 655384, 655364, 10, 720920, 655364, 11, 786456, 655364, 12, 851992, 655364, 13, 917528, 655364, 14, 25, 720900, 0, 65561, 720900, 1, 131097, 720900, 2, 196633, 720900, 3, 262169, 720900, 4, 327705, 720900, 5, 393241, 720900, 6, 458777, 720900, 7, 524313, 720900, 8, 589849, 720900, 9, 655385, 720900, 10, 720921, 720900, 11, 786457, 720900, 12, 851993, 720900, 13, 917529, 720900, 14, 26, 786436, 0, 65562, 786436, 1, 131098, 786436, 2, 196634, 786436, 3, 262170, 786436, 4, 327706, 786436, 5, 393242, 786436, 6, 458778, 786436, 7, 524314, 786436, 8, 589850, 786436, 9, 655386, 786436, 10, 720922, 786436, 11, 786458, 786436, 12, 851994, 786436, 13, 917530, 786436, 14, 27, 851972, 0, 65563, 851972, 1, 131099, 851972, 2, 196635, 851972, 3, 262171, 851972, 4, 327707, 851972, 5, 393243, 851972, 6, 458779, 851972, 7, 524315, 851972, 8, 589851, 851972, 9, 655387, 851972, 10, 720923, 851972, 11, 786459, 851972, 12, 851995, 851972, 13, 917531, 851972, 14, 28, 262148, 10, 65564, 262148, 10, 131100, 262148, 10, 196636, 262148, 10, 262172, 262148, 10, 327708, 262148, 10, 393244, 262148, 7, 458780, 262148, 8, 524316, 262148, 8, 589852, 262148, 9, 655388, 262148, 10, 720924, 262148, 11, 786460, 262148, 12, 851996, 262148, 13, 917532, 262148, 15, 983068, 327684, 16, 1048604, 327684, 17, 29, 851972, 0, 65565, 851972, 1, 131101, 851972, 2, 196637, 851972, 3, 262173, 851972, 4, 327709, 851972, 5, 393245, 851972, 6, 458781, 851972, 7, 524317, 851972, 8, 589853, 851972, 9, 655389, 851972, 10, 720925, 851972, 11, 786461, 851972, 12, 851997, 851972, 13, 917533, 851972, 14, 983069, 851972, 15, 1048605, 851972, 16, 983054, 4, 15, 1048590, 4, 16, 983055, 65540, 15, 1048591, 65540, 16, 983056, 131076, 15, 1048592, 131076, 16, 983057, 196612, 15, 1048593, 196612, 16, 983058, 262148, 15, 1048594, 262148, 16, 983059, 327684, 15, 1048595, 327684, 16, 983060, 393220, 15, 1048596, 393220, 16, 983061, 458756, 15, 1048597, 458756, 16, 983062, 524292, 15, 1048598, 524292, 16, 983063, 589828, 15, 1048599, 589828, 16, 983064, 655364, 15, 1048600, 655364, 16, 983065, 720900, 15, 1048601, 720900, 16, 983066, 786436, 15, 1048602, 786436, 16, 983067, 851972, 15, 1048603, 851972, 16, 1048576, 4, 16, 1048577, 65540, 16, 1048578, 131076, 16, 1048579, 196612, 16, 1048580, 262148, 16, 1048581, 327684, 16, 1048582, 393220, 16, 1048583, 458756, 16, 1048584, 524292, 16, 1048585, 589828, 16, 1048586, 655364, 16, 1048587, 720900, 16, 1048588, 786436, 16, 1048589, 851972, 16, 1441820, 262148, 10, 1376284, 262148, 12)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer/TileMap"]
custom_minimum_size = Vector2(1920, 1088)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.929412, 0.796078, 0.827451, 0)
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_dujkc")
offset_right = 1920.0
offset_bottom = 1088.0
color = Color(0.09, 0.1, 0.088, 0.94902)
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_hgaei")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("3_2jrm7")]
position = Vector2(960, 536)
scale = Vector2(1, 1)

[node name="Camera2D" type="Camera2D" parent="Player"]
scale = Vector2(1.12702, 1.45957)

[node name="Level_timer" type="Label" parent="Player/Camera2D"]
z_index = 1111
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -847.0
offset_top = -347.0
offset_right = -691.0
offset_bottom = -312.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 25
text = "00:00"

[node name="Path2D" type="Path2D" parent="Player/Camera2D"]
position = Vector2(-1755.96, -1076.35)
scale = Vector2(2, 2)
curve = SubResource("Curve2D_7jj1j")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Camera2D/Path2D"]
unique_name_in_owner = true
position = Vector2(-128.657, 1191.11)
rotation = -1.56739

[node name="ScoreLabel" type="Label" parent="Player"]
unique_name_in_owner = true
z_index = 4096
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 880.0
offset_top = -512.0
offset_right = 959.0
offset_bottom = -482.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.380874, 0.746054, 1, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "Score: 0"

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.545098)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -225.0
offset_right = 333.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 35
theme_override_font_sizes/font_size = 120
text = "Game Over"

[node name="Button" type="Button" parent="GameOver/ColorRect"]
z_index = 645
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -56.5
offset_right = 180.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 40
text = "Main menu"

[node name="AbilityMenu" parent="." instance=ExtResource("4_m7hs6")]
unique_name_in_owner = true
visible = false

[node name="slime_spawn_1" type="Timer" parent="."]
wait_time = 0.05

[node name="slime_spawn_2" type="Timer" parent="."]
wait_time = 0.05

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="pressed" from="GameOver/ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="slime_spawn_1" to="." method="_on_slime_spawn_1_timeout"]
[connection signal="timeout" from="slime_spawn_2" to="." method="_on_slime_spawn_1_timeout"]
[connection signal="timeout" from="slime_spawn_2" to="." method="_on_slime_spawn_2_timeout"]
